--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "kartik yogesh",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
